--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="auto">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="theme-color" content="#1e3a8a" />
+
     <title>Vite + React + TS</title>
   </head>
   <body>
