не правильная смена языка

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en" dir="auto">
   <head>
     <meta charset="UTF-8" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#1e3a8a" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#0c1c3f" />
+    <meta name="description" content="Mitkadem – AI-продвижение для юристов и профессионалов" />
 
     <title>Vite + React + TS</title>
   </head>
